# boxbot_ros

./: LICENSE  README.md
boxbot_bringup/: CMakeLists.txt  package.xml
boxbot_bringup/config/: arm_5_dof.yaml  arm_5dof.yaml  arm_6_dof.yaml  arm_6dof.yaml  connections.yaml  default.yaml  model.yaml
boxbot_bringup/launch/: boxbot_arm.launch  boxbot_moveit.launch  boxbot_sim.launch  boxbot_state.launch
boxbot_control/: CMakeLists.txt  package.xml
boxbot_control/config/: arm_5dof.yaml  arm_6dof.yaml  boxbot_5dof_control.yaml  boxbot_6dof_control.yaml  boxbot_control.yaml  boxbot_control_6dof.yaml
boxbot_control/launch/: boxbot_5dof_control.launch  boxbot_6dof_control.launch  boxbot_control.launch  control.launch.py
boxbot_description/: CMakeLists.txt  package.xml  regen_urdf.sh  urdf_regen.sh
boxbot_description/config/: boxbot.rviz
boxbot_description/launch/: boxbot.rviz  boxbot_5dof_rviz.launch  boxbot_6dof_rviz.launch  boxbot_rviz.launch  display.launch.py  rviz.launch  rviz_2.launch  test_block_rviz.launch
boxbot_description/meshes/: README.md  biceps_new_link.stl  forearm_1_link.stl  forearm_2_link.stl  torso_link.stl
boxbot_description/robots/: boxbot.urdf  boxbot.urdf.xacro  boxbot_2.urdf  boxbot_2.urdf.xacro  boxbot_5dof.urdf  boxbot_5dof.urdf.xacro  boxbot_6dof.urdf  boxbot_6dof.urdf.xacro  boxbot_test_block.urdf  boxbot_test_block.urdf.xacro
boxbot_description/urdf/: README.md  common_materials.xacro  head.urdf.xacro  joint_mimic.gazebo  materials.gazebo  sensors.gazebo  servos.urdf.xacro  test_block.urdf.xacro  widowx.urdf.xacro  widowx_6dof.urdf.xacro  widowx_gripper.xacro
boxbot_description/xacro/: boxbot.ros2_control.xacro  camera.xacro  common_colours.xacro  common_materials.xacro  gazebo_materials.xacro  head.urdf.xacro  materials.gazebo  widowx.urdf.xacro  widowx_gripper.xacro
boxbot_driver/: CMakeLists.txt  package.xml
boxbot_driver/include/boxbot_driver/: control_table.h  dynamixel.h  interface.h  sim_servo.h  sim_servo.hpp
boxbot_driver/launch/: arm_sim_driver.launch  driver_rosbridge.launch
boxbot_driver/scripts/: aggregator.py  servo.py  simulation.py  state.py  test_cmd.py
boxbot_driver/src/: arbotix.cpp  dynamixel.cpp  interface.cpp  sim_arbotix.cpp  sim_servo.cpp
boxbot_gazebo/: CMakeLists.txt  package.xml
boxbot_gazebo/config/: ros_gz_config.yaml
boxbot_gazebo/launch/: block_world.launch  boxbot_5dof.launch  boxbot_5dof_gazebo.launch  boxbot_6dof.launch  boxbot_6dof_gazebo.launch  boxbot_gazebo.launch  empty_world.launch  gazebo.launch.py  horizontal_block.launch  horizontal_move.launch  rotation_move.launch  vertical_block.launch  vertical_move.launch
boxbot_gazebo/models/: block_1.urdf.xacro
boxbot_gazebo/nodes/: mimic.py
boxbot_gazebo/scripts/: clock.py
boxbot_gazebo/src/: mimic.cpp
boxbot_gazebo/world/: block.world  empty.world
boxbot_moveit/: .setup_assistant
boxbot_moveit/boxbot_5_dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
boxbot_moveit/boxbot_5_dof_moveit_config/config/: boxbot.srdf  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
boxbot_moveit/boxbot_5_dof_moveit_config/launch/: boxbot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
boxbot_moveit/boxbot_6_dof_moveit_config/: CMakeLists.txt  package.xml
boxbot_moveit/boxbot_6_dof_moveit_config/config/: boxbot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
boxbot_moveit/boxbot_6_dof_moveit_config/launch/: boxbot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
boxbot_workspace/: CMakeLists.txt  package.xml
boxbot_workspace/launch/: eva_world.launch  iva_world.launch
boxbot_workspace/meshes/: plug.stl
boxbot_workspace/models/eva_panel/: model.config  model.sdf
boxbot_workspace/models/eva_panel/meshes/: dial_handle.stl  eva_station.stl
boxbot_workspace/models/iss_pack/: model.config  model.sdf
boxbot_workspace/models/iss_pack/meshes/: iss_pack.stl
boxbot_workspace/models/iva_panel/: model.config  model.sdf
boxbot_workspace/models/iva_panel/meshes/: airlock.stl  iva_station.stl  wheel_handle.stl
boxbot_workspace/models/leak_detector/: model.config  model.sdf
boxbot_workspace/models/leak_detector/meshes/: ultrasonic_detector.stl
boxbot_workspace/models/leak_sealer/: model.config  model.sdf
boxbot_workspace/models/leak_sealer/meshes/: sealant_tube.stl
boxbot_workspace/models/solar_panel/: model.config  model.sdf
boxbot_workspace/models/solar_panel/meshes/: briefcase_half_1.stl  briefcase_half_2.stl  button.stl  solar_panel.stl
boxbot_workspace/urdf/: cable.xacro  eva_cable.urdf.xacro
boxbot_workspace/worlds/: eva_workspace.world  iva_workspace.world
