<?xml version="1.0"?>
<package format="3">
  <name>boxbot_control</name>
  <version>0.0.0</version>
  <description>The boxbot_control package</description>
  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>
  <license>BSD-3</license>
  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2_control_cmake</build_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
