<?xml version="1.0"?>
<package format="2">
  <name>boxbot_description</name>
  <version>0.0.0</version>
  <description>The boxbot_description package</description>

  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>

  <license>BSD-3</license>

  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
