<?xml version="1.0"?>
<package format="2">
  <name>boxbot_gazebo</name>
  <version>0.0.0</version>
  <description>The boxbot_gazebo package</description>

  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>

  <license>BSD-3</license>

  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
