<?xml version="1.0"?>
<package format="3">
  <name>boxbot_gazebo</name>
  <version>0.0.0</version>
  <description>The boxbot_gazebo package</description>
  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>
  <license>BSD-3</license>
  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>boxbot_control</exec_depend>
  <exec_depend>boxbot_description</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
