<?xml version="1.0"?>
<package format="2">
  <name>boxbot_workspace</name>
  <version>0.0.0</version>
  <description>The boxbot_workspace package</description>

  <maintainer email="verbrymr@mail.uc.edu">Matthew Verbryke</maintainer>

  <license>BSD</license>

  <author email="verbrymr@mail.uc.edu">Matthew Verbryke</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
  
</package>
